dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.59)
AC_INIT([linux_environment], [0.0.1] , [pabitraadhikari@gmail.com])
AC_PROG_CXX
AC_PROG_CC
AC_CANONICAL_SYSTEM
m4_pattern_allow([AM_PROG_AR])
AM_PROG_AR
LT_INIT
AC_PROG_LIBTOOL
AC_ENABLE_STATIC
AC_ENABLE_SHARED
AM_PROG_LIBTOOL
AM_ENABLE_STATIC
AM_ENABLE_SHARED
AM_PROG_CC_C_O
AC_CONFIG_MACRO_DIR([m4])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_CONFIG_FILES(Makefile \
		src/Makefile )
AC_OUTPUT
